--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ body{
   .hero-title { font-size: 1.8rem; /* Reduzindo de 2.2rem (do 640px) para 1.8rem */}
   .container { padding: 0 1.5rem;}
   .logo {padding: 0 1rem;}
+  .hero {padding: 0.5rem 0 1rem;}  
 }
 
 /* Responsive grid */
@@ -262,6 +263,7 @@ body{
   .product-card img{ height:260px; }
   .filters{ justify-content:flex-start; overflow:auto; padding-bottom:.5rem; -webkit-overflow-scrolling:touch; }
   .logo {padding: 0 1rem;}
+  .hero {padding: 0.5rem 0 1rem;}  
 }
 
 /* Focus styles */
