--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ body{
   .filter-btn {
         /* Aumentamos o padding de .55rem .9rem (padrão) para .65rem 1rem */
         padding: .65rem 1rem; font-size: .95rem; /* Mantemos o tamanho padrão da fonte ou ajustamos sutilmente */}
+
 }
 @media (max-width: 640px){
   .sobre {background-color: var(--bg); /* Usa a cor base #FFF8F2 */}
@@ -263,7 +264,11 @@ body{
   .product-card img{ height:260px; }
   .filters{ justify-content:flex-start; overflow:auto; padding-bottom:.5rem; -webkit-overflow-scrolling:touch; }
   .logo {padding: 0 1rem;}
-  .hero {padding: 0.5rem 0 1rem;}  
+  .hero {padding: 0.5rem 0 1rem;}
+
+}
+@media (min-width: 641px) and (max-width: 1100px) {
+    .site-header{padding: 0.5rem 0.5em;}
 }
 
 /* Focus styles */
